[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "narain_2026"
version = "0.1.0"
description = "Differential expression, bootstrap analysis, and visualization for LHb/MHb single-cell RNA-seq data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.21",
    "pandas>=1.4",
    "scanpy>=1.9",
    "anndata>=0.8",
    "scipy>=1.8",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "joblib>=1.2",
    "tqdm>=4.64",
    "venn>=0.1.3",
]


[project.optional-dependencies]
dev = [
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "ipykernel>=6.25",
]

docs = [
    "jupyter",
    "notebook",
]


[tool.black]
line-length = 88
target-version = ["py39"]


[tool.isort]
profile = "black"


[tool.setuptools.packages.find]
where = ["."]
